raw-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: person-service
  name: person-service
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: person-service
  sessionAffinity: None
  type: ClusterIP
