raw-kubernetes/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: person-service
  name: person-service
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: person-service
    weight: 100
  wildcardPolicy: None
